[tool.poetry]
name = "mcskin"
version = "2022"
license = "mit"
description = "For some raw skin, generate 1.0, 1.8 and 1.8 bedrock skins."
authors = ["FredHappyface"]
classifiers = [
	"Environment :: Console",
	"Environment :: MacOS X",
	"Environment :: Win32 (MS Windows)",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FHPythonUtils/MCSkin"
repository = "https://github.com/FHPythonUtils/MCSkin"
documentation = "https://github.com/FHPythonUtils/MCSkin/blob/master/README.md"
readme = "README.md"

[tool.poetry.scripts]
mcskin = 'mcskin:cli'

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
waifu2x = "<2026,>=2024"
Pillow = "<11,>=10.2.0"
layeredimage = "<2026,>=2024.2"

[tool.poetry.group.dev.dependencies]
imgcompare = "^2.0.1"
pytest = "^8.0.2"
pylint = "^3.1.0"
handsdown = "^2.1.0"
coverage = "^7.4.3"

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
line-ending = "lf"


[tool.isort]
profile = "black"
indent = "Tab"

[tool.pydocstyle]
convention = "google"
ignore = "D205,D415"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.basic]
argument-naming-style = "camelCase"
attr-naming-style = "camelCase"
function-naming-style = "camelCase"
method-naming-style = "camelCase"
variable-naming-style = "camelCase"

[tool.pylint.format]
indent-string = "\t"

[tool.pylint.master]
ignore-paths = ["tests"]

[tool.pylint.messages_control]
enable = ["F", "E", "W", "R", "C"]
disable = ["pointless-string-statement", "superfluous-parens"]

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
	py311
	py310
	py39
	py38

[testenv]
deps =
	imgcompare
	pytest
commands = pytest tests
"""
